--- a/loginregreactjsmui1/package.json
+++ b/loginregreactjsmui1/package.json
@@ -16,7 +16,9 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "countries-and-timezones": "^3.6.0",
     "gsap": "^3.12.5",
+    "moment-timezone": "^0.5.45",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
