--- a/loginregreactjsmui1/package.json
+++ b/loginregreactjsmui1/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "countries-and-timezones": "^3.6.0",
     "gsap": "^3.12.5",
+    "mdb-react-ui-kit": "^8.0.0",
     "moment-timezone": "^0.5.45",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
