--- a/loginregreactjsmui1/package.json
+++ b/loginregreactjsmui1/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "typeit-react": "^2.7.1",
